# python-project-83

./: Makefile  README.md  database.sql  pyproject.toml  setup.cfg
.github/workflows/: github-actions.yml
page_analyzer/: __init__.py  app.py  use_db.py
page_analyzer/templates/: all_urls.html  base.html  index.html  show_details.html
